# workbench

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
agents/: engineer.md  verifier.md
commands/: architecture.md  boot.md  budget.md  checkpoint.md  codex-engineer.md  decision.md  dispatch.md  doctor.md  epic.md  inception.md  init.md  lead.md  level.md  loop.md  mc.md  mesh.md  next.md  park.md  remote.md  score.md  self-test.md  setup.md  suggest.md  supervise.md  task.md  teamlead.md  uninstall.md  upgrade.md  verify.md  workbench.md
crates/workbench-mesh/: Cargo.toml
crates/workbench-mesh/assets/: app.js  index.html  style.css
crates/workbench-mesh/src/: auth.rs  client.rs  lib.rs  main.rs  net.rs  protocol.rs  server.rs  statusline.rs  store.rs
docs/: 2026-06-26-workbench-foundation.md  2026-06-26-workbench-foundations-design.md  benchmarking.md  commands.md  concepts.md  configuration.md  getting-started.md  levels.md
hooks/: hooks.json
scripts/: arch-drift.sh  bench-intents.sh  bench-score.sh  bench.sh  budget.sh  deps.sh  detect-level.sh  doctor.sh  drift.sh  epic-new.sh  expectancy-gate.sh  gate-integrity.sh  graduate.sh  hooks-mode.sh  init.sh  knob-search.sh  lane.sh  lead.sh  levels.sh  lib.sh  loop-policy.sh  mc.sh  mesh-bootstrap.sh  mesh.sh  metric.sh  package-mesh-asset.sh  park.sh  regression-gate.sh  release-gate.sh  score.sh  self-test.sh  suggest-scan.sh  suggest.sh  task-move.sh  task-new.sh  uninstall.sh  upgrade.sh  usage-sum.sh  (+5 more)
(+205 files in other folders)
