[package]
name = "workbench-mesh"
version = "0.5.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
futures-util = "0.3"
hmac = "0.12"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "fs", "net", "sync"] }
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
tempfile = "3"
tokio-tungstenite = "0.24"
